--- a/default.css
+++ b/default.css
@@ -21,7 +21,8 @@ html, body {
 /* Main content and nav area styling */
 
 #main-content {
-    min-height: 101vh;
+    min-height: 98vh;
+    max-height: 100vh;
     width: 98%;
     margin-left: 50px;
     display: flex;
@@ -109,8 +110,9 @@ html, body {
 /* Home page styling */
 
 #main-content .main-info {
-    width: 30%;
-    margin-left: 100px;
+    max-width: 750px;
+    margin-left: 250px;
+    z-index: 5;
 }
 
 #main-content .main-info h1 {
@@ -129,12 +131,14 @@ html, body {
 }
 
 #main-content .main-sidebar {
-    width: 35%;
+    height: 100%;
 }
 
 #main-content .main-sidebar img {
-    max-width: 100%;
-    min-height: 100%;
+    bottom: 0;
+    right: 0;
+    height: 100%;
+    position: absolute;
 }
 
 /* Seconday info base styling */
@@ -152,16 +156,17 @@ html, body {
 /* Education styling */
 
 .education-content {
-    width: 60%;
+    min-width: 50%;
     position: relative;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 50px;
 }
 
 .education-content .education-card {
-    width: 400px;
+    width: 350px;
     height: 450px;
-    margin: auto;
+    margin:auto;
     background-color: #e6e6e6;
     /* box-shadow: 0px 5px 40px rgba(0,0,0,0.8); */
     text-align: center;
@@ -169,7 +174,7 @@ html, body {
 }
 
 .education-content .education-card:hover {
-    box-shadow: 0px 5px 40px rgba(0,0,0,0.8);
+    box-shadow: 0px 0px 50px rgba(0,0,0,0.8);
 }
 
 .education-content .education-card img {
@@ -191,3 +196,46 @@ html, body {
     padding: 0px 20px;
     font-size: .95rem;
 }
+
+/* Skills styling */
+
+.skills-content {
+    min-width:50%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 25px;
+}
+
+.skills-content .skills-card {
+    width: 350px;
+    height: 250px;
+    margin: auto;
+    background-color: #e6e6e6;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    text-align: center;
+}
+
+.skills-content .skills-card:hover {
+    box-shadow: 0 0 50px rgb(0,0,0, 0.8);
+}
+
+.skills-content .skills-card:hover i {
+    color: red;
+}
+
+.skills-content .skills-card i {
+    margin: 25px 10px;
+}
+
+.skills-content .skills-card h2 {
+    padding: 0 10px;
+    margin-bottom: 10px;
+}
+
+.skills-content .skills-card h5 {
+    padding: 0 10px;
+}
+
