Fixed some css pathing

--- a/Styling/default.css
+++ b/Styling/default.css
@@ -62,7 +62,7 @@ html, body {
 }
 
 .nav.active {
-    background-image: url("/Images/Menu-Icon-Reset.png");
+    background-image: url("../Images/Menu-Icon-Reset.png");
 }
 
 .nav:hover {
