--- a/Styling/default.css
+++ b/Styling/default.css
@@ -164,8 +164,8 @@ html, body {
 }
 
 .education-content .education-card {
-    width: 350px;
-    height: 450px;
+    width: 325px;
+    height: 465px;
     margin:auto;
     background-color: #e6e6e6;
     /* box-shadow: 0px 5px 40px rgba(0,0,0,0.8); */
@@ -175,25 +175,31 @@ html, body {
 
 .education-content .education-card:hover {
     box-shadow: 0px 0px 50px rgba(0,0,0,0.8);
+
 }
 
 .education-content .education-card img {
-    width: 100%;
+    width: 305px;
+    border: 2px solid #666666;
+    border-radius: 20px;
     height: 240px;
-    margin-bottom: 20px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    margin: 10px;
+
 }
 
 .education-content .education-card h3 {
     padding: 0px 20px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     font-size: 1.5rem;
     font-weight: bolder;
 }
 
+.education-content .education-card:hover h3 {
+    color: red;
+}
+
 .education-content .education-card h6 {
-    padding: 0px 20px;
+    padding: 0px 15px;
     font-size: .95rem;
 }
 
